; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_enabled_lpis_allowed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_enabled_lpis_allowed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GICR_PROPBASER = common dso_local global i64 0, align 8
@LPI_PROPBASE_SZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @enabled_lpis_allowed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enabled_lpis_allowed() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i64 (...) @gic_data_rdist_rd_base()
  %4 = load i64, i64* @GICR_PROPBASER, align 8
  %5 = add nsw i64 %3, %4
  %6 = call i32 @gicr_read_propbaser(i64 %5)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @GENMASK_ULL(i32 51, i32 12)
  %9 = and i32 %7, %8
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @LPI_PROPBASE_SZ, align 4
  %12 = call i32 @gic_check_reserved_range(i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @gicr_read_propbaser(i64) #1

declare dso_local i64 @gic_data_rdist_rd_base(...) #1

declare dso_local i32 @GENMASK_ULL(i32, i32) #1

declare dso_local i32 @gic_check_reserved_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
